POC_Istio/monitoring/kiali_gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: kiali-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - kiali.com
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: kiali
spec:
  hosts:
  - kiali.com
  gateways:
  - kiali-gateway
  http:
  - route:
    - destination:
        host: kiali
        port:
          number: 20001
